@@ -253,12 +253,24 @@ Returns %TRUE if tests are run in quite mode.
 
 <!-- ##### ENUM GTestTrapFlags ##### -->
 <para>
-
+Test traps are guards around forked tests. These flags
+determine what traps to set.
 </para>
 
-@G_TEST_TRAP_SILENCE_STDOUT: 
-@G_TEST_TRAP_SILENCE_STDERR: 
-@G_TEST_TRAP_INHERIT_STDIN: 
+@G_TEST_TRAP_SILENCE_STDOUT: Redirect stdout of the test child to 
+    <filename>/dev/null</filename> so it cannot be observed on the 
+    console during test runs. The actual output is still captured 
+    though to allow later tests with g_test_trap_assert_stdout().
+ 
+@G_TEST_TRAP_SILENCE_STDERR: Redirect stderr of the test child to 
+    <filename>/dev/null</filename> so it cannot be observed on the 
+    console during test runs. The actual output is still captured 
+    though to allow later tests with g_test_trap_assert_stderr().
+ 
+@G_TEST_TRAP_INHERIT_STDIN: If this flag is given, stdin of the forked 
+    child process is shared with stdin of its parent process. It is 
+    redirected to <filename>/dev/null</filename> otherwise.
+
 
 <!-- ##### FUNCTION g_test_trap_fork ##### -->
 <para>
